--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2018"
 
 [dependencies]
 bitflags = "1.2.1"
+clipboard = "0.5"
+glium = "0.26"
+imgui = "0.3"
+imgui-glium-renderer = "0.3"
+imgui-winit-support = "0.3"
 
 [dev-dependencies]
 file_diff = "1.0.0"
